tests/paczka1/fuzzy1/10836911.err
Error in line 5: a8BCZ6 S999 60,7
Error in line 11: a8BCZ6 S205 6,35
Error in line 8: Q3oj S999 87,2
Error in line 6: a8BCZ6 S205 50,2
Error in line 18: voMoBH4 S999 256,9
Error in line 19: a8BCZ6 A621 31,1
